<resources>
    <string name="app_name">Memo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="_projects">Your</string>
    <string name="projects">Projects</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txt_no_account_signup">Don\'t have an account?  <font color="#FFC839"> Sign up</font></string>
    <string name="txt_register_header">Create New Account</string>
    <string name="txt_register_subheader">Create your own account to get start with dashboard</string>
    <string name="txt_username">Username</string>
    <string name="txt_remember_me">Remember Me</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_username_hint">Username</string>
    <string name="txt_email">Email</string>
    <string name="txt_email_hint">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_password_hint">Password</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_Or">Or</string>
    <string name="txt_sign_up_with">Sign Up With</string>
    <string name="txt_google_login">Google</string>
    <string name="txt_login_header">Login</string>
    <string name="txt_login_subheader">Login to your account now :)</string>
    <string name="txt_login">Login</string>
    <string name="txt_error_message">%1$S*</string>
    <string name="managetask">Manage Task</string>
    <string name="txt_description">Getting more easier for note</string>
    <string name="txt_already_have_account">Already have an account</string>
    <string name="welcome">Hello Sir</string>
    <string name="back_buttom">Back</string>
    <string name="more_buttom">More</string>
    <string name="status">Updated At</string>
    <string name="assigned">Created At</string>
    <string name="submit">Done</string>
    <string name="txt_desc_hint">Write Your Description....</string>
    <string name="txt_title_hint">Write Your Title....</string>
    <string name="txt_title">Title</string>

    <string name="txt_desc">Description</string>
    <string name="add_note">Add Notes</string>
    <string name="in_progress">In Progress</string>
    <string name="not_started">Not Started</string>
    <string name="your_task_is">Your Task is</string>
    <string name="which_phone_should_i_buy">Which phone should I buy?</string>
    <string name="i_need_to_buy_a_new_phone_i_am_confused_between_iphone_11_and_samsung_galaxy_s10_which_one_should_i_buy">I need to buy a new phone. I am confused between iPhone 11 and Samsung Galaxy S10. Which one should I buy?</string>
    <string name="which_phone_should_i_buy1">Which phone should I buy?</string>
    <string name="i_need_to_buy_a_new_phone_i_am_confused_between_iphone_11_and_samsung_galaxy_s10_which_one_should_i_buy1">I need to buy a new phone. I am confused between iPhone 11 and Samsung Galaxy S10. Which one should I buy?</string>

    <string name="delete_buttom1">Delete_buttom</string>
    <string name="set_your_goals">Set your goals</string>
    <string name="record_all_your_best_ideas">Record all your best ideas in our best notes.</string>
    <string name="welcome_to_memo">Welcome to Memo.</string>
    <string name="enjoys_doing_your_tasks">Enjoys! doing your tasks.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>