<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingTop="16dp"
        android:paddingBottom="30dp">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="110dp"
            android:src="@drawable/ic_memo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/proxima_nova_cond_bold"
            android:text="@string/txt_login_header"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/proxima_nova_reg"
            android:text="@string/txt_login_subheader"
            android:textColor="@color/orange"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/back_ground"
                android:fontFamily="@font/proxima_nova_it_reg"
                android:hint="@string/txt_email_hint"
                android:drawableEnd="@drawable/ic_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/txt_email"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/back_ground"
                android:drawableEnd="@drawable/ic_visible"
                android:fontFamily="@font/proxima_nova_it_reg"
                android:hint="@string/txt_password_hint"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:layout_marginTop="24dp"
                android:paddingRight="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_email" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/txt_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <CheckBox
                    android:id="@+id/remember_me_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_remember_me"
                    android:fontFamily="@font/proxima_nova_reg"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_weight="1"

                />

                <TextView
                    android:id="@+id/forgot_password_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_forgot_password"
                    android:fontFamily="@font/proxima_nova_reg"
                    android:textColor="@color/orange"
                    android:textSize="14sp"
                    android:layout_marginStart="16dp"
                    />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.Material3.Button"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/proxima_nova_cond_bold"
            android:text="@string/txt_login"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:fontFamily="@font/proxima_nova_reg"
            android:text="@string/txt_no_account_signup"
            android:textSize="14sp" />


    </LinearLayout>


</ScrollView>