<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingTop="16dp"
        android:paddingBottom="30dp">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_memo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/Niradei_Bold"
            android:text="@string/Sign_in"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/Niradei_Regular"
            android:text="@string/txt_register_header"
            android:textColor="@color/primary_yellow"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/back_ground"
            android:drawableEnd="@drawable/ic_person"
            android:fontFamily="@font/Niradei_Regular"
            android:hint="@string/txt_username_hint"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="15sp"
            android:layout_marginTop="22dp" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/back_ground"
            android:drawableEnd="@drawable/ic_email"
            android:fontFamily="@font/Niradei_Regular"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:hint="@string/txt_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/back_ground"
            android:drawableEnd="@drawable/ic_visible"
            android:fontFamily="@font/Niradei_Regular"
            android:hint="@string/txt_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="dp"
            android:fontFamily="@font/Niradei_Regular"
            android:text=""
            android:textColor="@color/highlight_text_color"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/Widget.Material3.Button"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/Niradei_Bold"
            android:text="@string/txt_sign_in"

            android:textColor="@color/primary"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/txt_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:fontFamily="@font/Niradei_Semibold"
            android:text="@string/txt_Or"
            android:textSize="14sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/light_gray" />
        <TextView
            android:id="@+id/txt_signup_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:fontFamily="@font/Niradei_Semibold"
            android:text="@string/txt_sign_up_with"
            android:textSize="14sp"
            />
        <Button
            android:id="@+id/btn_google_login"
            style="@style/Widget.Material3.Button"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/Niradei_Bold"
            android:text="@string/txt_google_login"

            android:textColor="@color/primary"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person"
                android:background="@drawable/back_ground"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person"
                android:background="@drawable/back_ground"
                android:layout_gravity="center"
                android:layout_margin="12dp"

                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person"
                android:background="@drawable/back_ground"
                android:layout_gravity="center"
                android:layout_margin="12dp"

                />
        </LinearLayout>



    </LinearLayout>


</ScrollView>