<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="28dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/back_buttom"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start|bottom"
                android:backgroundTint="@color/primary_purple"
                android:contentDescription="@string/back_buttom"
                android:src="@drawable/ic_backbuttom_white"
                app:fabCustomSize="50dp"
                app:maxImageSize="20dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|top"
                android:layout_marginStart="250dp"
                android:backgroundTint="@color/primary_purple"
                android:contentDescription="@string/more_buttom"
                android:src="@drawable/ic_more"
                app:fabCustomSize="50dp"
                app:maxImageSize="24dp" />



        </LinearLayout>



        <TextView
            android:id="@+id/statusText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/niradei_regular"
            android:text="@string/status"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@+id/status"
            android:layout_marginStart="70dp"
            tools:ignore="MissingConstraints"
            android:textColor="@color/black"
            tools:layout_editor_absoluteY="88dp" />

        <ImageView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/status"
            android:layout_marginEnd="320dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

        <ImageView
            android:id="@+id/assign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/assign"
            android:layout_marginEnd="320dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/status"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_user"
            app:layout_constraintLeft_toRightOf="@+id/assign"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            android:layout_marginLeft="200dp"

            tools:ignore="MissingConstraints">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/niradei_regular"
            android:text="@string/assigned"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/statusText"
            android:layout_marginStart="70dp"
            android:layout_marginTop="15dp"
            tools:ignore="MissingConstraints"
            android:textColor="@color/black"
            tools:layout_editor_absoluteY="90dp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="120dp"
            android:layout_height="30dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="263dp"
            tools:layout_editor_absoluteY="88dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>