<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    tools:context=".ui.loading.Onboading_2_Fragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="105dp"
        android:layout_gravity="center"
        >

        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:src="@drawable/onboarding_two"
            ></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/niradei_bold"
            android:text="@string/set_your_goals"
            android:textColor="@color/white"
            android:layout_marginTop="80dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:fontFamily="@font/niradei_regular"
            android:text="@string/record_all_your_best_ideas"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ellipse"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ellipse_2"
                android:layout_marginStart="27dp"
                />
            <ImageView
                android:id="@+id/Dot1"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_dot_1"
                android:layout_marginStart="23dp"
                />
            <ImageView
                android:id="@+id/ellipse_1"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ellipse_2"

                android:layout_marginStart="23dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_gravity="center"
                >
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:backgroundTint="@color/white"
                    android:id="@+id/next_screen2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:src="@drawable/ic_right_arrow"
                    android:contentDescription="@string/next"
                    android:layout_margin="16dp" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</FrameLayout>